resolvendo layout shift

--- a/styles/form.css
+++ b/styles/form.css
@@ -78,7 +78,8 @@ form {
       select,
       textarea {
         appearance: none;
-        border: 1px solid var(--stroke-default);
+        border: 2px solid transparent;
+        outline: 1px solid var(--stroke-default);
         border-radius: 0.8rem;
         color: var(--text-primary);
         font: var(--text);
@@ -90,7 +91,7 @@ form {
       select:focus,
       textarea:focus,
       input[type="date"]:focus-within {
-        border: 0.2rem solid var(--stroke-highlight);
+        border-color: var(--stroke-highlight);
         outline: 0.4rem solid var(--surface-secondary);
         outline-offset: 0.1px;
       }
@@ -104,12 +105,28 @@ form {
     }
 
     .dropzone {
-      border: 2px dashed var(--stroke-default);
+      border: 2px dashed transparent;
+      outline: 1px dashed var(--stroke-default);
       border-radius: 0.8rem;
       gap: 0.8rem;
       justify-items: center;
       padding: 2.8rem;
       position: relative;
+
+      &:hover,
+      &:has(input:focus) {
+        background-color: var(--surface-secondary);
+        border-color: var(--stroke-highlight);
+        outline-width: 0;
+
+        svg path {
+          stroke: var(--stroke-highlight);
+        }
+
+        p {
+          color: var(--text-tertiary);
+        }
+      }
 
       input {
         cursor: pointer;
@@ -122,20 +139,6 @@ form {
         color: #a8a29e;
         max-width: 18rem;
         text-align: center;
-      }
-
-      &:hover,
-      &:has(input:focus) {
-        background-color: var(--surface-secondary);
-        border: 2px dashed var(--stroke-highlight);
-
-        svg path {
-          stroke: var(--stroke-highlight);
-        }
-
-        p {
-          color: var(--text-tertiary);
-        }
       }
     }
   }
@@ -166,7 +169,8 @@ form {
       /* margin-top: 1.6rem; */
 
       .radio-inner {
-        border: 1px solid var(--stroke-default);
+        border: 2px solid transparent;
+        outline: 1px solid var(--stroke-default);
         border-radius: 0.8rem;
         justify-items: center;
         padding: 3.2rem 0.8rem 1.6rem;
@@ -190,7 +194,7 @@ form {
 
         &:hover,
         &:focus-within {
-          border: 2px solid var(--stroke-highlight);
+          border-color: var(--stroke-highlight);
 
           & .radio-image {
             background-image: url(../assets/icons/radio-hover.svg);
@@ -200,7 +204,7 @@ form {
         }
 
         &:has(:checked) {
-          border: 2px solid var(--stroke-highlight);
+          border-color: var(--stroke-highlight);
 
           & .radio-image {
             background-image: url(../assets/icons/radio-checked.svg);
